Adjusted dependencies to run tests when using mvn install command