@@ -1,11 +1,7 @@
 package br.com.nubank.capital.gain.cucumber.steps;
 
-import br.com.nubank.capital.gain.Application;
 import br.com.nubank.capital.gain.delivery.controller.OperationController;
-import br.com.nubank.capital.gain.delivery.dto.OperationDto;
-import br.com.nubank.capital.gain.domain.entity.Tax;
 import com.fasterxml.jackson.core.JsonProcessingException;
-import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.DeserializationFeature;
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
@@ -16,19 +12,14 @@ import io.cucumber.java.en.And;
 import io.cucumber.java.en.Given;
 import io.cucumber.java.en.Then;
 import io.cucumber.java.en.When;
-import org.junit.jupiter.api.AfterEach;
-import org.junit.jupiter.api.Assertions;
-import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.InjectMocks;
-import org.mockito.junit.jupiter.MockitoExtension;
+import org.junit.Assert;
 
 import java.io.ByteArrayOutputStream;
 import java.io.PrintStream;
-import java.math.BigDecimal;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class OperationSteps {
 
@@ -47,7 +38,7 @@ public class OperationSteps {
     private static final OperationController operationController = OperationController.getInstance();
 
     @Before
-    public void init(){
+    public void init() {
         System.setOut(new PrintStream(outContent));
         System.setErr(new PrintStream(errContent));
 
@@ -72,17 +63,17 @@ public class OperationSteps {
 
     @When("I type in the command lines")
     public void iTypeInTheCommandLines() {
-        for (String operation: operations) {
+        for (String operation : operations) {
             operationController.execute(operation);
         }
     }
 
     @Then("the stdout should return the following values:")
-    public void theStdoutShouldReturnTheFollowingValues(List<String> expectedResultList) throws JsonProcessingException {
-        List<String> resultList = Arrays.stream(outContent.toString().split(NEW_LINE)).toList();
+    public void theStdoutShouldReturnTheFollowingValues(List<String> expectedResultList) {
+        List<String> resultList = Arrays.stream(outContent.toString().replace("\r", "").split(NEW_LINE)).collect(Collectors.toList());
 
-        for(int i=0; i < expectedResultList.size(); i++){
-            Assertions.assertEquals(expectedResultList.get(i), resultList.get(i));
+        for (int i = 0; i < expectedResultList.size(); i++) {
+            Assert.assertEquals(expectedResultList.get(i), resultList.get(i));
         }
     }
 
